<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.shanika.expensetracker.AddExpenseRecord">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="7dp">

        <LinearLayout

            android:id="@+id/topBar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="0dp"
            android:background="@drawable/gg"
            android:backgroundTintMode="screen"
            android:padding="5dp"
            android:paddingBottom="5dp"
            android:paddingEnd="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingStart="5dp"
            android:paddingTop="5dp"
            android:weightSum="1"
            tools:layout_editor_absoluteX="80dp"
            tools:layout_editor_absoluteY="0dp">

            <ImageButton
                android:id="@+id/back"
                style="@style/Widget.AppCompat.ImageButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="top|left"
                android:background="@drawable/ic_keyboard_arrow_left_red_900_24dp"
                android:baselineAlignBottom="false"
                android:contextClickable="true"
                android:cropToPadding="false"
                android:elevation="0dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/ic_keyboard_arrow_left_red_900_24dp" />

            <TextView

                android:id="@+id/addingArea"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="top|center"
                android:layout_marginBottom="0dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="5dp"
                android:gravity="left|center"
                android:text="Add new Expense"
                android:textColor="#0c2cbb"
                android:textColorLink="@android:color/holo_orange_dark"
                android:textDirection="firstStrongRtl"
                android:textSize="28sp"
                android:textStyle="bold"
                android:translationY="-7dp" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/dateArea"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/date"
                android:layout_width="130dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:filterTouchesWhenObscured="true"
                android:fitsSystemWindows="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:freezesText="true"
                android:gravity="left|center"
                android:hapticFeedbackEnabled="true"
                android:includeFontPadding="true"
                android:keepScreenOn="true"
                android:text="Date"
                android:textColor="@android:color/background_dark"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/expenseDateView"
                android:layout_width="230dp"
                android:layout_height="40dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="10dp"
                android:layout_weight="0.67"
                android:background="#fce3b5"
                android:clickable="false"
                android:contextClickable="false"
                android:gravity="left|center_vertical" />

            <ImageButton
                android:id="@+id/expenseDateBtn"
                android:layout_width="48dp"
                android:layout_height="50dp"
                android:background="@drawable/ic_date_range_red_900_24dp"
                android:elevation="2dp"
                android:translationY="10dp" />

        </LinearLayout>

        <CalendarView
            android:id="@+id/calendarViewAI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="#5fd888"
            android:clickable="false"
            android:contextClickable="false"
            android:dateTextAppearance="@style/TextAppearance.AppCompat.Button"
            android:onClick="getDateAndDisplay"
            android:selectedWeekBackgroundColor="#a0e85c"
            android:unfocusedMonthDateColor="@color/colorPrimaryDark"
            android:visibility="gone"
            android:weekDayTextAppearance="@style/TextAppearance.AppCompat.Button"
            android:weekNumberColor="@android:color/holo_blue_dark" />

        <LinearLayout
            android:id="@+id/amountL"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal"
            android:visibility="visible">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:gravity="left|center"
                android:text="Amount:"
                android:textColor="@android:color/background_dark"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Rs."
                android:textColor="@color/colorPrimaryDark"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/expenseAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="?attr/colorButtonNormal"
                android:ems="10"
                android:inputType="numberDecimal" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/categoryL"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:gravity="left|center"
                android:text="Category"
                android:textColor="@android:color/background_dark"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/expenseCategorySet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:gravity="center"
                 />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/descriptionL"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="0.46"
                android:gravity="left"
                android:text="Description (Optional)"
                android:textColor="@android:color/background_dark"
                android:textSize="20sp"
                android:textStyle="bold|italic" />

            <EditText
                android:id="@+id/expenseDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="?attr/colorButtonNormal"
                android:ems="10"
                android:gravity="top|left"
                android:inputType="textPersonName"
                android:maxWidth="400dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttonsL"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/expenseAddBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:background="#2d9ae8"
                android:text="ADD" />

            <Button
                android:id="@+id/expenseCancelBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:background="@android:color/holo_red_light"
                android:text="CANCEL" />
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
